fixed reset, added help

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <div class="col reset">
           <button type="button" class="btn btn-secondary">Reset</button>
         </div>
+        <div class="col">
+          <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="Tic tac toe but with a twist. Select one of the coins of your color, select one of the 9 grids. Larger coins can be put on top of smaller coins, irrespective of color. Rest rules are same as normal tic tac toe. Enjoy!">
+          Help
+          </button>
+        </div>
       </div>
     </div>
     <div class ="row">
@@ -64,6 +69,6 @@
       <div class="game-cell"></div>
     </div> 
   </div>
-  <script src="app2.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
